<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_cadastrar_medicamento"
    android:overScrollMode="never"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.FragmentCadastrarNovoMedicamento">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/container_cl"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_title_activity_add_medicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_act_adicionar_medicamentos"
            android:textColor="?android:textColorPrimary"
            android:textSize="32sp"
            android:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:layout_marginVertical="40dp"/>






        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_medicine_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/medicine_name"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:saveEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_title_activity_add_medicine">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_medicine_name_child"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:saveEnabled="true"
                android:textSize="28sp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_medicine_qnt_per_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/times_a_day"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_medicine_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_medicine_qnt_per_day_child"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_duracao_tratamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_long_will_you_take_this_medicine"
            android:textSize="22sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="?android:textColorPrimary"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/til_medicine_qnt_per_day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"/>

        <LinearLayout
            android:id="@+id/container_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/label_duracao_tratamento"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_duracao_dias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:fontFamily="sans-serif-medium"
                android:layout_weight="1"
                android:backgroundTint="?attr/colorPrimary"
                android:textColor="@color/white"
                android:layout_marginEnd="16dp"
                android:textStyle="bold"
                android:textSize="26sp" />


            <Button
                android:id="@+id/btn_duracao_meses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/months"
                android:fontFamily="sans-serif-medium"
                android:layout_weight="1"
                android:backgroundTint="?attr/colorPrimary"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="26sp" />




        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_medicine_time_treatment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/treatment_time"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="0dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_duracao_tratamento">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_medicine_time_treatment_child"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_time_first_take"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/first_dose_hint"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_medicine_time_treatment">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:inputType="none"
                android:enabled="false"
                android:id="@+id/et_til_time_first_take"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_open_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_time_of_first_dose"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="26sp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_time_first_take"
            android:layout_marginHorizontal="16dp"/>





        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/input_data_inicio_tratamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_open_time_picker"
            android:inputType="number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:mask="__/__/____"
            android:textSize="28sp"
            android:textColorHint="@color/light_gray"
            android:fontFamily="sans-serif"
            android:hint="@string/treatment_start_date"
            app:maskCharacter="_"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            app:maskStyle="normal" />



        <Button
            android:id="@+id/btn_confirm_new_medication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_medication"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="26sp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_data_inicio_tratamento"
            android:layout_marginHorizontal="16dp"/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            android:layout_marginTop="5dp"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            ads:layout_constraintTop_toBottomOf="@id/btn_confirm_new_medication"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>