...
    <string name="dose_time">dose time</string>
    <string name="medicines">Medicines</string>
    <string name="history">History</string>
    <string name="medicine_already_registered">There is already a medicine registered with that name!</string>
    <string name="error_registering_medication">Error registering medication</string>
    <string name="registered_successfully">registered successfully!</string>
    <string name="dose_time_already_passed">the date and time you chose for the first dose has already passed!</string>
    <string name="error_registering_medication_check_data">Error registering medication. Check the filling of the data.</string>
    <string name="the_medicine">the medicine</string>
    <string name="was_excluded">was excluded</string>
    <string name="alarm_activated">Alarm activated for next dose of</string>
    <string name="at">at</string>
    <string name="doses_are_over">the doses for this medicine are over!</string>
...
    <string name="do_u_wanna">Do you want to take the dose now</string>
    <string name="now">now</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dose_already_taken">Dose already taken</string>
    <string name="dose_already_taken2">you\'ve already taken this dose!</string>
    <string name="ok">OK</string>
    <string name="sure_delete">Are you sure you want to delete</string>
    <string name="alarm_deactivated_for">Alarm deactivated for</string>
    <string name="take_dose_of">Take the dose of</string>
    <string name="finished">finished</string>
    <string name="image_you_dont_have_any_medication_registered_yet">image you dont have any medication registered yet</string>
    <string name="add_new_medication">add new medication</string>
...
