<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/medicamentosFragment"
        android:icon="@drawable/ic_pills_bottle"
        android:title="@string/medicines"
        android:contentDescription="@string/medicines"/>

    <item
        android:id="@+id/historicoFragment"
        android:icon="@drawable/ic_historico"
        android:title="@string/history"
        android:contentDescription="@string/medicines"/>

</menu>